--- a/zpi_django/zpi_django/site_media/css/calendar/tipTip.css
+++ b/zpi_django/zpi_django/site_media/css/calendar/tipTip.css
@@ -26,12 +26,11 @@
 
 #tiptip_content {
 	font-size: 11px;
-	color: #fff;
+	color: #fff !important;;
 	text-shadow: 0 0 2px #000;
 	padding: 4px 8px;
 	border: 1px solid rgba(255,255,255,0.25);
-	background-color: rgb(25,25,25);
-	background-color: rgba(25,25,25,0.92);
+	background-color: #646464;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(transparent), to(#000));
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
